crates/kith-core/tests/snapshots/layout_graph__ancestors_cousin_marriage_g3.snap
---
source: crates/kith-core/tests/layout_graph.rs
expression: "&model"
---
LayoutModel(
  mode: Ancestors,
  nodes: [
    LayoutNode(
      id: 0,
      kind: Person,
      entity: Person(9),
      x: 390.0,
      y: 648.0,
      width: 220.0,
      height: 72.0,
      content: Some(NodeContent(
        display_name: "Gustav Vest",
        lifespan: None,
        sex: Male,
        living: true,
        portrait: None,
      )),
      focal: true,
    ),
    LayoutNode(
      id: 1,
      kind: Person,
      entity: Person(7),
      x: 134.0,
      y: 432.0,
      width: 220.0,
      height: 72.0,
      content: Some(NodeContent(
        display_name: "Erik Vest",
        lifespan: None,
        sex: Male,
        living: true,
        portrait: None,
      )),
      focal: false,
    ),
    LayoutNode(
      id: 2,
      kind: Person,
      entity: Person(8),
      x: 646.0,
      y: 432.0,
      width: 220.0,
      height: 72.0,
      content: Some(NodeContent(
        display_name: "Frida Ost",
        lifespan: None,
        sex: Female,
        living: true,
        portrait: None,
      )),
      focal: false,
    ),
    LayoutNode(
      id: 3,
      kind: Person,
      entity: Person(3),
      x: 12.0,
      y: 216.0,
      width: 220.0,
      height: 72.0,
      content: Some(NodeContent(
        display_name: "Carl Stamfar",
        lifespan: None,
        sex: Male,
        living: true,
        portrait: None,
      )),
      focal: false,
    ),
    LayoutNode(
      id: 4,
      kind: Person,
      entity: Person(5),
      x: 256.0,
      y: 216.0,
      width: 220.0,
      height: 72.0,
      content: Some(NodeContent(
        display_name: "Wilma Vest",
        lifespan: None,
        sex: Female,
        living: true,
        portrait: None,
      )),
      focal: false,
    ),
    LayoutNode(
      id: 5,
      kind: Person,
      entity: Person(4),
      x: 524.0,
      y: 216.0,
      width: 220.0,
      height: 72.0,
      content: Some(NodeContent(
        display_name: "Dora Stamfar",
        lifespan: None,
        sex: Female,
        living: true,
        portrait: None,
      )),
      focal: false,
    ),
    LayoutNode(
      id: 6,
      kind: Person,
      entity: Person(6),
      x: 768.0,
      y: 216.0,
      width: 220.0,
      height: 72.0,
      content: Some(NodeContent(
        display_name: "Viktor Ost",
        lifespan: None,
        sex: Male,
        living: true,
        portrait: None,
      )),
      focal: false,
    ),
    LayoutNode(
      id: 7,
      kind: Person,
      entity: Person(1),
      x: -110.0,
      y: 0.0,
      width: 220.0,
      height: 72.0,
      content: Some(NodeContent(
        display_name: "Anders Stamfar",
        lifespan: None,
        sex: Male,
        living: true,
        portrait: None,
      )),
      focal: false,
    ),
    LayoutNode(
      id: 8,
      kind: Person,
      entity: Person(2),
      x: 134.0,
      y: 0.0,
      width: 220.0,
      height: 72.0,
      content: Some(NodeContent(
        display_name: "Berta Stamfar",
        lifespan: None,
        sex: Female,
        living: true,
        portrait: None,
      )),
      focal: false,
    ),
    LayoutNode(
      id: 9,
      kind: Person,
      entity: Person(1),
      x: 402.0,
      y: 0.0,
      width: 220.0,
      height: 72.0,
      content: Some(NodeContent(
        display_name: "Anders Stamfar",
        lifespan: None,
        sex: Male,
        living: true,
        portrait: None,
      )),
      focal: false,
    ),
    LayoutNode(
      id: 10,
      kind: Person,
      entity: Person(2),
      x: 646.0,
      y: 0.0,
      width: 220.0,
      height: 72.0,
      content: Some(NodeContent(
        display_name: "Berta Stamfar",
        lifespan: None,
        sex: Female,
        living: true,
        portrait: None,
      )),
      focal: false,
    ),
    LayoutNode(
      id: 11,
      kind: Union,
      entity: Union(4),
      x: 492.0,
      y: 568.0,
      width: 16.0,
      height: 16.0,
      content: None,
      focal: false,
    ),
    LayoutNode(
      id: 12,
      kind: Union,
      entity: Union(2),
      x: 236.0,
      y: 352.0,
      width: 16.0,
      height: 16.0,
      content: None,
      focal: false,
    ),
    LayoutNode(
      id: 13,
      kind: Union,
      entity: Union(3),
      x: 748.0,
      y: 352.0,
      width: 16.0,
      height: 16.0,
      content: None,
      focal: false,
    ),
    LayoutNode(
      id: 14,
      kind: Union,
      entity: Union(1),
      x: 114.0,
      y: 136.0,
      width: 16.0,
      height: 16.0,
      content: None,
      focal: false,
    ),
    LayoutNode(
      id: 15,
      kind: Union,
      entity: Union(1),
      x: 626.0,
      y: 136.0,
      width: 16.0,
      height: 16.0,
      content: None,
      focal: false,
    ),
  ],
  links: [
    LayoutLink(
      from: 1,
      to: 11,
      kind: Partner,
      anchors: [
        Point(
          x: 354.0,
          y: 468.0,
        ),
        Point(
          x: 500.0,
          y: 576.0,
        ),
      ],
    ),
    LayoutLink(
      from: 2,
      to: 11,
      kind: Partner,
      anchors: [
        Point(
          x: 646.0,
          y: 468.0,
        ),
        Point(
          x: 500.0,
          y: 576.0,
        ),
      ],
    ),
    LayoutLink(
      from: 11,
      to: 0,
      kind: Descent,
      anchors: [
        Point(
          x: 500.0,
          y: 584.0,
        ),
        Point(
          x: 500.0,
          y: 648.0,
        ),
      ],
    ),
    LayoutLink(
      from: 3,
      to: 12,
      kind: Partner,
      anchors: [
        Point(
          x: 232.0,
          y: 252.0,
        ),
        Point(
          x: 244.0,
          y: 360.0,
        ),
      ],
    ),
    LayoutLink(
      from: 4,
      to: 12,
      kind: Partner,
      anchors: [
        Point(
          x: 256.0,
          y: 252.0,
        ),
        Point(
          x: 244.0,
          y: 360.0,
        ),
      ],
    ),
    LayoutLink(
      from: 12,
      to: 1,
      kind: Descent,
      anchors: [
        Point(
          x: 244.0,
          y: 368.0,
        ),
        Point(
          x: 244.0,
          y: 432.0,
        ),
      ],
    ),
    LayoutLink(
      from: 5,
      to: 13,
      kind: Partner,
      anchors: [
        Point(
          x: 744.0,
          y: 252.0,
        ),
        Point(
          x: 756.0,
          y: 360.0,
        ),
      ],
    ),
    LayoutLink(
      from: 6,
      to: 13,
      kind: Partner,
      anchors: [
        Point(
          x: 768.0,
          y: 252.0,
        ),
        Point(
          x: 756.0,
          y: 360.0,
        ),
      ],
    ),
    LayoutLink(
      from: 13,
      to: 2,
      kind: Descent,
      anchors: [
        Point(
          x: 756.0,
          y: 368.0,
        ),
        Point(
          x: 756.0,
          y: 432.0,
        ),
      ],
    ),
    LayoutLink(
      from: 7,
      to: 14,
      kind: Partner,
      anchors: [
        Point(
          x: 110.0,
          y: 36.0,
        ),
        Point(
          x: 122.0,
          y: 144.0,
        ),
      ],
    ),
    LayoutLink(
      from: 8,
      to: 14,
      kind: Partner,
      anchors: [
        Point(
          x: 134.0,
          y: 36.0,
        ),
        Point(
          x: 122.0,
          y: 144.0,
        ),
      ],
    ),
    LayoutLink(
      from: 14,
      to: 3,
      kind: Descent,
      anchors: [
        Point(
          x: 122.0,
          y: 152.0,
        ),
        Point(
          x: 122.0,
          y: 216.0,
        ),
      ],
    ),
    LayoutLink(
      from: 9,
      to: 15,
      kind: Partner,
      anchors: [
        Point(
          x: 622.0,
          y: 36.0,
        ),
        Point(
          x: 634.0,
          y: 144.0,
        ),
      ],
    ),
    LayoutLink(
      from: 10,
      to: 15,
      kind: Partner,
      anchors: [
        Point(
          x: 646.0,
          y: 36.0,
        ),
        Point(
          x: 634.0,
          y: 144.0,
        ),
      ],
    ),
    LayoutLink(
      from: 15,
      to: 5,
      kind: Descent,
      anchors: [
        Point(
          x: 634.0,
          y: 152.0,
        ),
        Point(
          x: 634.0,
          y: 216.0,
        ),
      ],
    ),
  ],
  bounds: Rect(
    x: -110.0,
    y: 0.0,
    width: 1098.0,
    height: 720.0,
  ),
)
