crates/kith-core/tests/snapshots/layout_graph__ancestors_missing_grandparents_g2.snap
---
source: crates/kith-core/tests/layout_graph.rs
expression: "&model"
---
LayoutModel(
  mode: Ancestors,
  nodes: [
    LayoutNode(
      id: 0,
      kind: Person,
      entity: Person(1),
      x: 134.0,
      y: 432.0,
      width: 220.0,
      height: 72.0,
      content: Some(NodeContent(
        display_name: "Sven Holm",
        lifespan: None,
        sex: Male,
        living: true,
        portrait: None,
      )),
      focal: true,
    ),
    LayoutNode(
      id: 1,
      kind: Person,
      entity: Person(2),
      x: 12.0,
      y: 216.0,
      width: 220.0,
      height: 72.0,
      content: Some(NodeContent(
        display_name: "Bjorn Holm",
        lifespan: None,
        sex: Male,
        living: true,
        portrait: None,
      )),
      focal: false,
    ),
    LayoutNode(
      id: 2,
      kind: Person,
      entity: Person(3),
      x: 256.0,
      y: 216.0,
      width: 220.0,
      height: 72.0,
      content: Some(NodeContent(
        display_name: "Greta Holm",
        lifespan: None,
        sex: Female,
        living: true,
        portrait: None,
      )),
      focal: false,
    ),
    LayoutNode(
      id: 3,
      kind: Person,
      entity: Person(4),
      x: -110.0,
      y: 0.0,
      width: 220.0,
      height: 72.0,
      content: Some(NodeContent(
        display_name: "Old Holm",
        lifespan: None,
        sex: Male,
        living: true,
        portrait: None,
      )),
      focal: false,
    ),
    LayoutNode(
      id: 4,
      kind: Person,
      entity: Person(5),
      x: 134.0,
      y: 0.0,
      width: 220.0,
      height: 72.0,
      content: Some(NodeContent(
        display_name: "Olga Holm",
        lifespan: None,
        sex: Female,
        living: true,
        portrait: None,
      )),
      focal: false,
    ),
    LayoutNode(
      id: 5,
      kind: Union,
      entity: Union(1),
      x: 236.0,
      y: 352.0,
      width: 16.0,
      height: 16.0,
      content: None,
      focal: false,
    ),
    LayoutNode(
      id: 6,
      kind: Union,
      entity: Union(2),
      x: 114.0,
      y: 136.0,
      width: 16.0,
      height: 16.0,
      content: None,
      focal: false,
    ),
  ],
  links: [
    LayoutLink(
      from: 1,
      to: 5,
      kind: Partner,
      anchors: [
        Point(
          x: 232.0,
          y: 252.0,
        ),
        Point(
          x: 244.0,
          y: 360.0,
        ),
      ],
    ),
    LayoutLink(
      from: 2,
      to: 5,
      kind: Partner,
      anchors: [
        Point(
          x: 256.0,
          y: 252.0,
        ),
        Point(
          x: 244.0,
          y: 360.0,
        ),
      ],
    ),
    LayoutLink(
      from: 5,
      to: 0,
      kind: Descent,
      anchors: [
        Point(
          x: 244.0,
          y: 368.0,
        ),
        Point(
          x: 244.0,
          y: 432.0,
        ),
      ],
    ),
    LayoutLink(
      from: 3,
      to: 6,
      kind: Partner,
      anchors: [
        Point(
          x: 110.0,
          y: 36.0,
        ),
        Point(
          x: 122.0,
          y: 144.0,
        ),
      ],
    ),
    LayoutLink(
      from: 4,
      to: 6,
      kind: Partner,
      anchors: [
        Point(
          x: 134.0,
          y: 36.0,
        ),
        Point(
          x: 122.0,
          y: 144.0,
        ),
      ],
    ),
    LayoutLink(
      from: 6,
      to: 1,
      kind: Descent,
      anchors: [
        Point(
          x: 122.0,
          y: 152.0,
        ),
        Point(
          x: 122.0,
          y: 216.0,
        ),
      ],
    ),
  ],
  bounds: Rect(
    x: -110.0,
    y: 0.0,
    width: 586.0,
    height: 504.0,
  ),
)
