crates/kith-core/tests/snapshots/layout_graph__ancestors_small_balanced_g2.snap
---
source: crates/kith-core/tests/layout_graph.rs
expression: "&model"
---
LayoutModel(
  mode: Ancestors,
  nodes: [
    LayoutNode(
      id: 0,
      kind: Person,
      entity: Person(7),
      x: 268.0,
      y: 432.0,
      width: 220.0,
      height: 72.0,
      content: Some(NodeContent(
        display_name: "Olav Lund",
        lifespan: Some("1850–1915"),
        sex: Male,
        living: true,
        portrait: None,
      )),
      focal: true,
    ),
    LayoutNode(
      id: 1,
      kind: Person,
      entity: Person(5),
      x: 12.0,
      y: 216.0,
      width: 220.0,
      height: 72.0,
      content: Some(NodeContent(
        display_name: "Anders Lund",
        lifespan: Some("1825–1890"),
        sex: Male,
        living: true,
        portrait: None,
      )),
      focal: false,
    ),
    LayoutNode(
      id: 2,
      kind: Person,
      entity: Person(6),
      x: 524.0,
      y: 216.0,
      width: 220.0,
      height: 72.0,
      content: Some(NodeContent(
        display_name: "Anna Lie",
        lifespan: Some("b. 1828"),
        sex: Female,
        living: true,
        portrait: None,
      )),
      focal: false,
    ),
    LayoutNode(
      id: 3,
      kind: Person,
      entity: Person(1),
      x: -110.0,
      y: 0.0,
      width: 220.0,
      height: 72.0,
      content: Some(NodeContent(
        display_name: "Per Lund",
        lifespan: Some("1800–1865"),
        sex: Male,
        living: true,
        portrait: None,
      )),
      focal: false,
    ),
    LayoutNode(
      id: 4,
      kind: Person,
      entity: Person(2),
      x: 134.0,
      y: 0.0,
      width: 220.0,
      height: 72.0,
      content: Some(NodeContent(
        display_name: "Petra Lund",
        lifespan: None,
        sex: Female,
        living: true,
        portrait: None,
      )),
      focal: false,
    ),
    LayoutNode(
      id: 5,
      kind: Person,
      entity: Person(3),
      x: 402.0,
      y: 0.0,
      width: 220.0,
      height: 72.0,
      content: Some(NodeContent(
        display_name: "Mads Lie",
        lifespan: None,
        sex: Male,
        living: true,
        portrait: None,
      )),
      focal: false,
    ),
    LayoutNode(
      id: 6,
      kind: Person,
      entity: Person(4),
      x: 646.0,
      y: 0.0,
      width: 220.0,
      height: 72.0,
      content: Some(NodeContent(
        display_name: "Mona Lie",
        lifespan: None,
        sex: Female,
        living: true,
        portrait: None,
      )),
      focal: false,
    ),
    LayoutNode(
      id: 7,
      kind: Union,
      entity: Union(3),
      x: 370.0,
      y: 352.0,
      width: 16.0,
      height: 16.0,
      content: None,
      focal: false,
    ),
    LayoutNode(
      id: 8,
      kind: Union,
      entity: Union(1),
      x: 114.0,
      y: 136.0,
      width: 16.0,
      height: 16.0,
      content: None,
      focal: false,
    ),
    LayoutNode(
      id: 9,
      kind: Union,
      entity: Union(2),
      x: 626.0,
      y: 136.0,
      width: 16.0,
      height: 16.0,
      content: None,
      focal: false,
    ),
  ],
  links: [
    LayoutLink(
      from: 1,
      to: 7,
      kind: Partner,
      anchors: [
        Point(
          x: 232.0,
          y: 252.0,
        ),
        Point(
          x: 378.0,
          y: 360.0,
        ),
      ],
    ),
    LayoutLink(
      from: 2,
      to: 7,
      kind: Partner,
      anchors: [
        Point(
          x: 524.0,
          y: 252.0,
        ),
        Point(
          x: 378.0,
          y: 360.0,
        ),
      ],
    ),
    LayoutLink(
      from: 7,
      to: 0,
      kind: Descent,
      anchors: [
        Point(
          x: 378.0,
          y: 368.0,
        ),
        Point(
          x: 378.0,
          y: 432.0,
        ),
      ],
    ),
    LayoutLink(
      from: 3,
      to: 8,
      kind: Partner,
      anchors: [
        Point(
          x: 110.0,
          y: 36.0,
        ),
        Point(
          x: 122.0,
          y: 144.0,
        ),
      ],
    ),
    LayoutLink(
      from: 4,
      to: 8,
      kind: Partner,
      anchors: [
        Point(
          x: 134.0,
          y: 36.0,
        ),
        Point(
          x: 122.0,
          y: 144.0,
        ),
      ],
    ),
    LayoutLink(
      from: 8,
      to: 1,
      kind: Descent,
      anchors: [
        Point(
          x: 122.0,
          y: 152.0,
        ),
        Point(
          x: 122.0,
          y: 216.0,
        ),
      ],
    ),
    LayoutLink(
      from: 5,
      to: 9,
      kind: Partner,
      anchors: [
        Point(
          x: 622.0,
          y: 36.0,
        ),
        Point(
          x: 634.0,
          y: 144.0,
        ),
      ],
    ),
    LayoutLink(
      from: 6,
      to: 9,
      kind: Partner,
      anchors: [
        Point(
          x: 646.0,
          y: 36.0,
        ),
        Point(
          x: 634.0,
          y: 144.0,
        ),
      ],
    ),
    LayoutLink(
      from: 9,
      to: 2,
      kind: Descent,
      anchors: [
        Point(
          x: 634.0,
          y: 152.0,
        ),
        Point(
          x: 634.0,
          y: 216.0,
        ),
      ],
    ),
  ],
  bounds: Rect(
    x: -110.0,
    y: 0.0,
    width: 976.0,
    height: 504.0,
  ),
)
