crates/kith-core/tests/snapshots/layout_graph__descendants_multiple_marriage_g1.snap
---
source: crates/kith-core/tests/layout_graph.rs
expression: "&model"
---
LayoutModel(
  mode: Descendants,
  nodes: [
    LayoutNode(
      id: 0,
      kind: Person,
      entity: Person(1),
      x: 207.0,
      y: 0.0,
      width: 220.0,
      height: 72.0,
      content: Some(NodeContent(
        display_name: "Henrik Sand",
        lifespan: None,
        sex: Male,
        living: true,
        portrait: None,
      )),
      focal: true,
    ),
    LayoutNode(
      id: 1,
      kind: Person,
      entity: Person(2),
      x: 32.0,
      y: 136.0,
      width: 220.0,
      height: 72.0,
      content: Some(NodeContent(
        display_name: "Ingrid Sand",
        lifespan: None,
        sex: Female,
        living: true,
        portrait: None,
      )),
      focal: false,
    ),
    LayoutNode(
      id: 2,
      kind: Person,
      entity: Person(4),
      x: -110.0,
      y: 272.0,
      width: 220.0,
      height: 72.0,
      content: Some(NodeContent(
        display_name: "Arne Sand",
        lifespan: None,
        sex: Male,
        living: true,
        portrait: None,
      )),
      focal: false,
    ),
    LayoutNode(
      id: 3,
      kind: Person,
      entity: Person(5),
      x: 134.0,
      y: 272.0,
      width: 220.0,
      height: 72.0,
      content: Some(NodeContent(
        display_name: "Bente Sand",
        lifespan: None,
        sex: Female,
        living: true,
        portrait: None,
      )),
      focal: false,
    ),
    LayoutNode(
      id: 4,
      kind: Person,
      entity: Person(3),
      x: 422.0,
      y: 136.0,
      width: 220.0,
      height: 72.0,
      content: Some(NodeContent(
        display_name: "Johanna Sand",
        lifespan: None,
        sex: Female,
        living: true,
        portrait: None,
      )),
      focal: false,
    ),
    LayoutNode(
      id: 5,
      kind: Person,
      entity: Person(6),
      x: 402.0,
      y: 272.0,
      width: 220.0,
      height: 72.0,
      content: Some(NodeContent(
        display_name: "Carl Sand",
        lifespan: None,
        sex: Male,
        living: true,
        portrait: None,
      )),
      focal: false,
    ),
    LayoutNode(
      id: 6,
      kind: Union,
      entity: Union(1),
      x: -8.0,
      y: 136.0,
      width: 16.0,
      height: 16.0,
      content: None,
      focal: false,
    ),
    LayoutNode(
      id: 7,
      kind: Union,
      entity: Union(2),
      x: 382.0,
      y: 136.0,
      width: 16.0,
      height: 16.0,
      content: None,
      focal: false,
    ),
  ],
  links: [
    LayoutLink(
      from: 0,
      to: 6,
      kind: Partner,
      anchors: [
        Point(
          x: 207.0,
          y: 36.0,
        ),
        Point(
          x: 0.0,
          y: 144.0,
        ),
      ],
    ),
    LayoutLink(
      from: 1,
      to: 6,
      kind: Partner,
      anchors: [
        Point(
          x: 32.0,
          y: 172.0,
        ),
        Point(
          x: 0.0,
          y: 144.0,
        ),
      ],
    ),
    LayoutLink(
      from: 6,
      to: 2,
      kind: Descent,
      anchors: [
        Point(
          x: 0.0,
          y: 152.0,
        ),
        Point(
          x: 0.0,
          y: 272.0,
        ),
      ],
    ),
    LayoutLink(
      from: 6,
      to: 3,
      kind: Descent,
      anchors: [
        Point(
          x: 8.0,
          y: 144.0,
        ),
        Point(
          x: 134.0,
          y: 308.0,
        ),
      ],
    ),
    LayoutLink(
      from: 0,
      to: 7,
      kind: Partner,
      anchors: [
        Point(
          x: 317.0,
          y: 72.0,
        ),
        Point(
          x: 390.0,
          y: 144.0,
        ),
      ],
    ),
    LayoutLink(
      from: 4,
      to: 7,
      kind: Partner,
      anchors: [
        Point(
          x: 422.0,
          y: 172.0,
        ),
        Point(
          x: 390.0,
          y: 144.0,
        ),
      ],
    ),
    LayoutLink(
      from: 7,
      to: 5,
      kind: Descent,
      anchors: [
        Point(
          x: 390.0,
          y: 152.0,
        ),
        Point(
          x: 512.0,
          y: 272.0,
        ),
      ],
    ),
  ],
  bounds: Rect(
    x: -110.0,
    y: 0.0,
    width: 752.0,
    height: 344.0,
  ),
)
